# TypeEvalPy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
autogen/: generate_typeevalpy_dataset.py  helpers.py  test.py
docs/: .xdp-rect27.png-ILhTvr  Tool_Integration_Guide.md  Tracking.md  TypeEvalPy_JSON_schema.py  design.drawio  requirements.txt  tests_runner.txt
docs/leaderboard/: README.md  README_template.md  analysis_leaderboard.py
docs/webview/: index.html
extras/: openai_batch_inference.ipynb
extras/fine_tuning/: 1.finetuning_data_prepare.ipynb  2.train-llms.ipynb  finetuning_cg_gpt_v1.jsonl  finetuning_cs_gpt_v1.jsonl
extras/ollama_callgraphs/: models_info.md
extras/ollama_callsites/: Dockerfile
micro-benchmark/: track.xlsx
micro-benchmark-excluded/typeevalpy_external_module/: setup.py
proposal/: proposal_Samkutty.pptx
scripts/: benchmark_count.py  collect_runtime_types.py  delete_python_files.py  generate_typeevalpy_dataset.py  get_identifiers.py  rewrite_jsons.py  scalpel_wrapper.py  select_random_files_eval.py  test.py  test_pytype.py  test_pytype_enhanced.py
src/: config_template.yaml  main_analyze_results.py  main_runner.py  runner_class.py  test_match.py  tests_runner.py  utils.py
src/result_analysis_scripts/: analysis_tables.py  analysis_utils.py  analyze_results.py  main_analyze_results.py
src/result_analyzer/: README_template.md  analysis_leaderboard.py  analysis_tables.py  analysis_utils.py  large_scale_analysis.py  large_scale_analysis_repo.py  (+1 more)
(+23653 files in other folders)
