[build-system]
# Minimum requirements for the build system to execute.
requires = []

[tool.black]
line-length = 88
target_version = ['py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''

[project]
name = "TypeEvalPy"
version = "0.0.1"

description = "TypeEvalPy: The Python Static Type Inference Framework"
readme = "README.md"
requires-python = "==3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]

[tool.isort]
profile = "black"
